# bix_airflow_etl_pipeline

./: README.md  connect_network.sh  pyproject.toml  queries.sql
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: .env  etl.py
airflow/logs/scheduler/: latest
postgres/: docker-compose.yaml
postgres/data/: postmaster.pid
postgres/data/base/1/: pg_internal.init
postgres/data/base/16389/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13398  13398_fsm  13398_vm  13403  13403_fsm  13403_vm  13407  13408  13408_fsm  13408_vm  13412  16390  16390_fsm  16390_vm  16393  16397  16398  16402  16403  16404  16404_fsm  16404_vm  16409  (+200 more)
postgres/data/base/5/: 2615  pg_internal.init
postgres/data/global/: 1214  1232  1233  1260  1262  2671  2672  2676  2677  pg_control  pg_internal.init
