[tool.poetry]
name = "bix-airflow-etl-pipeline"
version = "0.1.0"
description = ""
authors = ["Rodrigo Carvalho <rodrigofmcarvalho@gmail.com>"]
readme = "README.md"
packages = [{include = "bix_airflow_etl_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.6.2"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
ipykernel = "^6.24.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
mkdocs = "^1.4.3"
pymdown-extensions = "^10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
